--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
     "keywords": ["keyword-to-be-used-1","keyword-to-be-used-2"],
     "homepage": "https://github.com/Archanasharma0003/composer_validation",
     "license": "MIT",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "authors": [
         {
             "name": "Archana",
@@ -16,7 +18,6 @@
     "require": {
         "php": ">=7.0.0"
     },
-        "minimum-stability": "dev",
     "autoload": {
         "psr-0": {
             "App\\": "app/"
