--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,6 @@
     "keywords": ["keyword-to-be-used-1","keyword-to-be-used-2"],
     "homepage": "https://github.com/Archanasharma0003/composer_validation",
     "license": "MIT",
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "authors": [
         {
             "name": "Archana",
@@ -15,6 +13,8 @@
             "role": "Laravel Developer"
         }
     ],
+    "minimum-stability": "dev",
+    "prefer-stable": true
     "require": {
         "php": ">=7.0.0"
     },
