--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,11 @@
             "App\\": "app/"
         }
     }
-        "minimum-stability": "dev",
-    "prefer-stable": true,
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
